# varda

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WINDOWS-INSTALL.md  kittest.toml
.augment/rules/: main.md
.augment/skills/rust/: SKILL.md
.github/workflows/: ci.yml  clippy.yml  fmt.yml  release.yml  test.yml
.varda/: keymap.json  midi.json  osc.json  scene.json  stage.json
.varda/controller-profiles/: apc_mini_profile.json
.varda/presets/channels/: camtrip.json  chansavetest.json  feeling_it.json  language_hole.json  membrane_star_fly.json  quantum_soup.json  sacred_stuff.json  savetest.json  standard_model.json
.varda/presets/decks/: fractal_fly.json  savenametest.json  savetest.json  testmod.json
arm64-app/Contents/: Info.plist
arm64-app/Contents/Frameworks/: libSvtAv1Enc.4.dylib  libX11.6.dylib  libaom.3.dylib  libass.9.dylib  libavdevice.62.dylib  libavfilter.11.dylib  libavformat.62.dylib  libavutil.60.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libglib-2.0.0.dylib  libharfbuzz.0.dylib  libpng16.16.dylib  libsrt.1.5.dylib  libssl.3.dylib  libswresample.6.dylib  libswscale.9.dylib  libtheoradec.2.dylib  libtheoraenc.2.dylib  libunibreak.7.dylib  libvorbis.0.dylib  libvorbisenc.2.dylib  libxcb-shape.0.dylib  libxcb-shm.0.dylib  libxcb-xfixes.0.dylib  libxcb.1.dylib
arm64-app/Contents/_CodeSignature/: CodeResources
benches/: audio_analysis.rs  compositing.rs  html_render.rs  polygon_render.rs  shader_params.rs
docs/: 01-getting-started.md  02-concepts.md  03-library-panel.md  04-performance.md  05-modulation.md  06-control-surfaces.md  07-outputs.md  08-projection.md  09-streaming-and-io.md  10-resolution-and-monitoring.md  11-shader-library.md  12-isf-authoring.md  13-api.md  14-benchmarking.md  15-macro-controls.md  README.md  api.md  benchmarking.md  concepts.md  control-surfaces.md  getting-started.md  isf-authoring.md  modulation.md  performance.md  projection.md  streaming-and-io.md
examples/: stage-cad-arena.dxf
intent/: target-users.md  why.md
scripts/: bench-smoke.sh  install-cli-linux.sh  install-cli-macos.sh
scripts/ci/: build-ffmpeg-x86_64.sh  build-linux.sh  build-macos.sh  build-windows.ps1  combine-universal.sh
shaders/: add_subtract.fs  apollonian_glow.fs  ascii_art.fs  aurora_borealis.fs  bars.fs  bicycle_day.fs  big_bang.fs  big_bang.fs.baseline  big_brother.fs  biomine.fs  black_hole.fs  black_hole_sim.comp  block_distort.fs  blur.fs  brightness_contrast.fs  channel_mixer.fs  char_cycle.fs  checkerboard.fs  chroma_flow.fs  chroma_key.fs  clouds.fs  color_balance.fs  color_correction.fs  color_replace.fs  colorize.fs  compute_gradient.comp  cosmic_web.comp  crystal_cave.fs  cymatics.fs  dark_matter.fs  digital_brain.fs  displace.fs  duotone.fs  edge_detect.fs  edge_glow.fs  emboss.fs  eyes.fs  feedback_trails.fs  film_grain.fs  fire.fs  (+70 more)
spec/: architecture-overview.md  channel-routing.md  deck-sources.md  error-handling.md  library-panel.md  midi-control.md  modulation.md  multi-output.md  performance-optimization.md  persistence.md  resolution-and-scaling.md  roadmap.md  scene-management.md  settings-and-monitoring.md  transitions.md  ui-design.md
src/: lib.rs  main.rs
src/app/: actions.rs  commands.rs  engine_impl.rs  history.rs  inputs.rs  mod.rs  outputs.rs  render.rs  snapshot.rs  state.rs  surfaces.rs  workspace.rs
src/app/interactive/: input.rs  mod.rs  window.rs
src/app/state/: decks.rs  io.rs  mod.rs  modulation.rs  outputs.rs  params.rs  presets.rs  sequences.rs  surfaces.rs  video.rs
src/audio/: mod.rs
src/camera/: mod.rs
src/channel/: mod.rs
src/clock/: mod.rs
src/deck/: effect.rs  mod.rs  render.rs  source.rs
src/engine/: mod.rs  traits.rs  types.rs
src/engine/value/: detect.rs  dome.rs  mod.rs  render.rs  surface.rs  video.rs  warp.rs
src/internal/: cli_install.rs  mod.rs  param_router.rs
src/internal/analyzer/: brightness.rs  face_detect.rs  mod.rs  traits.rs
src/internal/audio/: mod.rs
src/internal/camera/: mod.rs
src/internal/channel/: mod.rs
src/internal/clock/: mod.rs
src/internal/deck/: effect.rs  mod.rs  render.rs  source.rs
src/internal/html/: mod.rs  servo_backend.rs
src/internal/isf/: compiler.rs  metadata.rs  mod.rs  parser.rs
src/internal/keymap/: mod.rs
src/internal/macros/: mod.rs
src/internal/midi/: auto_map.rs  controller_profile.rs  mod.rs
src/internal/mixer/: mod.rs  render.rs  transition.rs
src/internal/modulation/: audio.rs  engine.rs  mod.rs  sources.rs
src/internal/ndi/: ffi.rs  mod.rs  sdk.rs
src/internal/notifications/: mod.rs
src/internal/osc/: mod.rs
src/internal/params/: mod.rs
src/isf/: compiler.rs  metadata.rs  mod.rs  parser.rs
src/midi/: apc_mini.rs  apc_mini_profile.toml  controller_profile.rs  mod.rs
src/mixer/: mod.rs  render.rs  transition.rs
src/modulation/: mod.rs  sources.rs
src/ndi/: mod.rs
src/osc/: mod.rs
src/params/: mod.rs
src/persistence/: mod.rs
src/registry/: mod.rs
src/renderer/: blit.rs  context.rs  mod.rs  pipeline.rs  readback.rs  subprocess.rs  transition.rs
src/scene/: mod.rs
src/srt/: mod.rs
src/surface/: mod.rs
src/ui/: mod.rs  notifications.rs  panels.rs  state.rs  widgets.rs
src/video/: hap.rs  mod.rs
test_shaders/: abstract_field.fs  bars.fs  colorize.fs  crop.fs  duotone.fs  edge_glow.fs  feedback_trails.fs  film_grain.fs  flip.fs  freeze.fs  generative_feedback.fs  glow_bloom.fs  goo.fs  gradient.fs  grid.fs  hilbert_curve.fs  hue_shift.fs  kaleidoscope.fs  levels.fs  lines.fs  liquid_light.fs  melt_drip.fs  noise.fs  old_film.fs  oscilloscope.fs  particle.fs  pinch_bulge.fs  plasma.fs  polkadot.fs  radar.fs  rings.fs  ripple.fs  sepia.fs  shaper.fs  solid_color.fs  starfield.fs  tile.fs  tint.fs  transform.fs  transition_push.fs  (+4 more)
tests/: api_e2e.rs  command_roundtrip.rs  engine_integration.rs  engine_value_boundary_guard.rs  persistence_integration.rs  render_correctness.rs  render_invariants.rs  ui_integration.rs  ui_snapshots.rs
utils/: generate_atlases.py  import_hand_atlas.py
vision/: north-star.md  parity-gap.md
(+149 files in other folders)
