[package]
name = "varda"
version = "0.1.0"
edition = "2021"
authors = ["Varda Contributors"]
description = "Linux and MacOS native VJ software with ISF/GLSL shader support"
license = "MIT"

[lib]
name = "varda"
path = "src/lib.rs"

[dependencies]
# Graphics
wgpu = "27.0"
winit = "0.30"
bytemuck = { version = "1.25", features = ["derive"] }

# Shader compilation
shaderc = "0.10"
naga = { version = "27.0", features = ["spv-in", "wgsl-out"] }

# ISF metadata parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = { version = "0.33", features = ["accesskit"] }

# File system
notify = "8.2"
walkdir = "2.5"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Async runtime
pollster = "0.4"
cpal = "0.17.3"
rustfft = "6.4.1"
crossbeam-channel = "0.5.15"
ffmpeg-next = "8.1.0"
rosc = "0.11.4"
image = "0.25.10"
rfd = "0.17.2"
snap = "1.1.1"
nokhwa = { version = "0.10.10", features = ["input-native", "output-threaded"] }
midir = "0.11"
yuvutils-rs = "0.8.3"
geo = "0.33.1"
sysinfo = "0.38.4"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "net", "sync"] }
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.6.10", features = ["cors", "fs"] }
futures-util = "0.3.32"
libloading = "0.9.0"
futures-lite = "2.6.1"
uuid = { version = "1.23.1", features = ["v4"] }
json-patch = "4.2.0"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"

[features]
test-fixtures = []

[dev-dependencies]
egui_kittest = { version = "0.33.3", features = ["wgpu", "snapshot"] }
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
varda = { path = ".", features = ["test-fixtures"] }
