[package]
name = "varda"
version = "0.1.9"
edition = "2021"
authors = ["Varda Contributors"]
description = "Linux and MacOS native VJ software with ISF/GLSL shader support"
license = "MIT"

[lib]
name = "varda"
path = "src/lib.rs"

[dependencies]
# Graphics
wgpu = "29.0"
winit = "0.30"
bytemuck = { version = "1.25", features = ["derive"] }
half = "2.6"

# Shader compilation (build-from-source ensures static linking — avoids
# libshaderc_shared.dylib runtime errors when users have Homebrew shaderc)
shaderc = { version = "0.10", features = ["build-from-source"] }
naga = { version = "29.0", features = ["spv-in", "wgsl-out"] }

# ISF metadata parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = { version = "0.34", features = ["accesskit"] }

# File system
notify = "8.2"
walkdir = "2.5"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Async runtime
pollster = "0.4"
cpal = "0.17.3"
rustfft = "6.4.1"
crossbeam-channel = "0.5.15"
ffmpeg-next = "8.1.0"
rosc = "0.11.4"
image = "0.25.10"
rfd = "0.17.2"
snap = "1.1.1"
nokhwa = { version = "0.10.10", features = ["input-native", "output-threaded"] }
midir = "0.11"
yuvutils-rs = "0.8.3"
geo = "0.33.1"
sysinfo = "0.38.4"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "net", "sync"] }
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.6.10", features = ["cors", "fs"] }
futures-util = "0.3.32"
libloading = "0.9.0"
futures-lite = "2.6.1"
uuid = { version = "1.23.1", features = ["v4"] }
json-patch = "4.2.0"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"
imageproc = "0.26.2"
usvg = "0.47.0"
dxf = "0.6.1"
base64 = "0.22.1"
dirs = "6.0.0"
arc-swap = "1.9.1"
# ONNX Runtime is statically linked via ort's default `download-binaries`
# feature (CPU build). No dylib to locate, bundle, or version-match.
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17.2", optional = true }
servo = { version = "0.1.0", optional = true }
url = { version = "2.5", optional = true }
euclid = { version = "0.22", optional = true }
keyboard-types = { version = "0.8", optional = true }

# Syphon client FFI (macOS only). The syphon module is compiled unconditionally
# on macOS; Syphon.framework itself is dlopen'd at runtime (via libloading), so
# these crates are the only build-time additions.
[target.'cfg(target_os = "macos")'.dependencies]
objc2            = "0.6"
objc2-foundation = "0.3"
objc2-metal      = "0.3"

[features]
default = ["face-detection", "html"]
# ML-backed analyzers (ONNX Runtime + ndarray). Disabled for the x86_64 macOS
# slice to keep the Intel build ort-free. See spec/plugin-architecture.md (decision 5).
face-detection = ["dep:ort", "dep:ndarray"]
# HTML deck source (Servo offscreen render → wgpu). See spec/html-source.md.
# Only the servo_backend module is gated — the HtmlManager integration surface
# always compiles, so all integration/persistence/UI/API code and tests build
# without this feature.
#
# ON BY DEFAULT: the backend uses Servo's built-in SoftwareRenderingContext and
# CPU readback (read_to_image) rather than zero-copy GPU interop. This avoids the
# grafting/servo-wgpu-interop-adapter dependency (which does not compile on macOS
# against wgpu 29), so the backend builds cleanly on every target. The tradeoff is
# software GL rasterization (slower than GPU); zero-copy GPU import is a follow-up.
# Servo is heavy to build but the feature is stable, so it ships in the default
# profile. Disable with `--no-default-features` (re-add `face-detection` as needed).
# See spec/html-source.md "Decision: html on by default".
html = ["dep:servo", "dep:url", "dep:euclid", "dep:keyboard-types"]
test-fixtures = []
url = ["dep:url"]
euclid = ["dep:euclid"]
keyboard-types = ["dep:keyboard-types"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
egui_kittest = { version = "0.34.2", features = ["wgpu", "snapshot"] }
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
varda = { path = ".", features = ["test-fixtures"] }

[[bench]]
name = "compositing"
harness = false

[[bench]]
name = "shader_params"
harness = false

[[bench]]
name = "audio_analysis"
harness = false

[[bench]]
name = "polygon_render"
harness = false

[[bench]]
name = "html_render"
harness = false


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
# NOTE: panic = "unwind" is required — multiple subsystems use catch_unwind
# to isolate panics from corrupted media files, third-party imageproc code,
# and background threads (see src/app/render.rs, src/usecases/api/runner.rs,
# src/internal/surface/import.rs). Using "abort" makes all of those dead
# code and any panic on any thread kills the process during a live show.
panic = "unwind"

[profile.bench]
debug = true
strip = "none"
